# institute-of-ai

./: .gitignore  README.md  pyproject.toml
homeworks/HW01/: HW01.ipynb  README.md
homeworks/HW02/: HW02.ipynb  README.md
homeworks/HW03/: README.md
homeworks/HW03/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW03/eda-cli/src/eda_cli/: core.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/: README.md
homeworks/HW04/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py  core.py
homeworks/HW05/: HW05.ipynb  README.md
homeworks/HW06/: HW06.ipynb  README.md  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  README.md  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json  stability_kmeans_ds1.json
homeworks/HW07/artifacts/labels/: labels_hw07_ds4.csv
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  hw12_utils.py  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
project/notebooks/: eda_v1.ipynb
