[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "s03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "pytest",
    "python-multipart",
    "typer",
    "uvicorn[standard]",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"
